--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,15 @@
 <!-- HEADER -->
-<header>
+<header class="app-header">
   <app-menu><a routerLink="/menu"></a></app-menu>
 </header>
 
 <!-- MAIN -->
-<main>
+<main class="app-main">
   <router-outlet></router-outlet>
 </main>
 
 <!-- FOOTER -->
-<footer>
+<footer class="app-footer">
   <div>
     <small>Copyright © 2024 chatons.org. Tous droits réservés.</small>
   </div>
