--- a/src/app/components/kitten/kitten.component.html
+++ b/src/app/components/kitten/kitten.component.html
@@ -7,6 +7,6 @@
         <p><em class="pem">Coucou,</em></p>
         <p>Je suis <em class="pem">{{kittenCard.name}}</em>
             , au poste {{kittenCard.id}}.</p>
-        <p>Né de race {{kittenCard.race}}, le {{kittenCard.age}}. 😀</p>
+        <p>Né de race {{kittenCard.race}}, le {{kittenCard.birthday}}. 😀</p>
     </span>
 </div>
