Commit generic form implementation on kittensComponent. It involve the form, newKitten and kittens components

--- a/src/app/components/newkitten/newkitten/newkitten.component.html
+++ b/src/app/components/newkitten/newkitten/newkitten.component.html
@@ -1,6 +1,10 @@
 <h3>Accueil Chaton</h3>
 
-<!-- matching form-kitten's kitten and create-kitten's kitten -->
+<!-- matching form-kitten's kitten and create-kitten's kitten 
 <app-formkitten
 (newKittenDataToChange)="gettingNewKitten($event)">
 </app-formkitten>
+-->
+<app-form
+(newKittenDataToEmit)="gettingNewKitten($event)">
+</app-form>
