--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -14,7 +14,7 @@
     <!-- Firstname/Name-->
     <fieldset>
         <label for="fname">Prénom/nom </label>
-        <input id="fname" name="fname" type="text" [(ngModel)]="u_firstname" #fname="ngModel" required minlength="2"
+        <input id="fname" name="fname" type="text" [(ngModel)]="e_usrFName_aName" #fname="ngModel" required minlength="2"
             maxlength="20" placeholder="Prénom/Nom">
     </fieldset>
     <!-- Vérification et message d'erreur, alerte couleur sur le champ Kitten name -->
@@ -27,7 +27,7 @@
     <!-- Lastname/Breed-->
     <fieldset>
         <label for="lname">Nom/Race </label>
-        <input id="lname" name="lname" type="text" [(ngModel)]="u_lastname" #lname="ngModel" required minlength="2"
+        <input id="lname" name="lname" type="text" [(ngModel)]="e_usrLName_aRace" #lname="ngModel" required minlength="2"
             maxlength="20" placeholder="Nom/Race">
     </fieldset>
     <!-- Vérification et message d'erreur, alerte couleur sur le champ Kitten name -->
@@ -42,9 +42,9 @@
     <fieldset>
         <legend>Sexe </legend>
         <label for="male">Homme/Mâle</label>
-        <input id="male" type="radio" name="radio" value="male" [(ngModel)]="u_sex" #user_sex="ngModel" />
+        <input id="male" type="radio" name="radio" value="male" [(ngModel)]="e_usr_aSex" #user_sex="ngModel" />
         <label for="female">Femme/Femelle</label>
-        <input id="female" type="radio" name="radio" value="female" [(ngModel)]="u_sex" #user_sex="ngModel" />
+        <input id="female" type="radio" name="radio" value="female" [(ngModel)]="e_usr_aSex" #user_sex="ngModel" />
         <!-- Vérification et message d'erreur, alerte couleur sur le champ Kitten race -->
         <div *ngIf="user_sex.errors, elseQuantity">
             <em *ngIf="user_sex.errors?.['required']" class="msgColorAlert">la selection sex est requis</em>
@@ -54,8 +54,8 @@
     <!-- Birthday -->
     <fieldset>
         <label for="kitten-birthday-date">Date de naissance </label>
-        <input id="kitten-birthday-date" name="kitten-birthday" type="date" [(ngModel)]="u_birthday"
-            #birthdayDateKitten="ngModel" required>
+        <input id="kitten-birthday-date" name="kitten-birthday" type="date" [(ngModel)]="e_usr_aBirthday"
+            #birthdayDateKitten="ngModel" required><em class="msgColorAlert">{{e_usr_aBirthday | date:'dd-MM-yyyy'}}</em>
         <!-- Vérification and Message d'erreurs de date -->
         <div *ngIf="birthdayDateKitten.errors, elseDate"><em *ngIf="birthdayDateKitten.errors?.['required']"
                 class="msgColorAlert">Le champ date est requis</em>
@@ -65,7 +65,7 @@
     <!-- Picture -->
     <fieldset>
         <label for="kitten-picture">Photo </label>
-        <input id="kitten-picture" name="kitten-picture" type="text" [(ngModel)]="u_picture" #pictureKitten="ngModel"
+        <input id="kitten-picture" name="kitten-picture" type="text" [(ngModel)]="e_usr_aPicture" #pictureKitten="ngModel"
             required>
         <!-- Vérification and Message d'erreurs de contact -->
         <div *ngIf="pictureKitten.errors,  elseContact"><em *ngIf="pictureKitten.errors?.['required']"
