--- a/src/_import.scss
+++ b/src/_import.scss
@@ -1,1 +1,58 @@
-$mainColor: #b23a86;
+@import url('https://fonts.googleapis.com/css2?family=Gothic+A1&display=swap');
+
+:root {
+     // styles /
+     --global-font: Gothic A1;
+     --body-bg: white;
+     --global-bsdw-color: rgba(17, 17, 26, 0.1) 0px 4px 16px 0px inset, rgba(17, 17, 26, 0.05) 0px 8px 32px 0px;
+     --body-HeaderMainFooter-bg: white;
+     --h1h2-color: var(global-bsdw-color); // BKP (Sartre modus) to replace: rgb(92, 190, 6);
+     --h3h4-color: rgb(76, 157, 4);
+     --dfn-color: rgb(82, 88, 77);
+
+     // List cards container/
+     --list-CardsContainer-bg-color: white;
+     --list-CardsContainer-bx-Shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+     // Form /
+     --form_boder: 1px solid #ccc;
+     // form-kitten /
+     --bnt-dbled-color: grey;
+     --bnt-dbled-bg-color: antiquewhite;
+     --bnt-ebled-color: antiquewhite;
+     --bnt-ebled-bg-color: green;
+     // Alertes /
+     --msgColorAlert: orange;
+     --msgColorValid: green;
+
+     // KittenCard /
+     --kittenCard_bx-shdow: 2px 2px 50px 10px #ccc;
+     --kittenCard-pem: rgb(176, 45, 73);
+
+     // Borders to  DEBUG /
+     --index-body-border: 3px dotted magenta;
+     --body-sections: 4px dotted red; // BKP (Sartre modus) to replace: #ccc;
+     --header-border: 5px solid rgb(30, 255, 0);
+     --menu-border: 6px dashed rgb(63, 87, 164);
+
+     --grid-areas: .1px dotted #4e59ae; // BKP (Sartre modus) to replace: green;
+     --main-grid-areas-items: .1px dotted #ccc; // BKP (Sartre modus) to replace: blue;
+     --main-grid-areas-items-container: .1px dotted #ccc; // BKP (Sartre modus) to replace: orangered;
+     --main-grid-areas-items-cards-container: .1px dotted #ccc; // BKP (Sartre modus) to replace: grey;
+     --main-grid-areas-items-container-hover: .1px dotted #ccc; // BKP (Sartre modus) to replace: rgb(169, 237, 177);
+
+     --main-grid-container-border: var(--body-sections);
+     --grid-itemList: var(--grid-areas);
+     --grid-itemList-CardsContainer-boder: var(--main-grid-areas-items);
+     --grid-itemList-CardContainer: var(--main-grid-areas-items-container);
+     --grid-itemList-CardContainer-hover: var(--main-grid-areas-items-container-hover);
+     --grid-itemUser: var(--grid-areas);
+     --grid-itemUser-UserKittens-Container: var(--main-grid-areas-items);
+     --grid-itemUser-kittenList-Container: var(--main-grid-areas-items-container);
+     --grid-itemUser-kittenCard-Container: var(--main-grid-areas-items-cards-container);
+     --grid-itemUser-kittenCard-Container-hover: var(--main-grid-areas-items-container-hover);
+     --grid-itemForm: var(--grid-areas);
+     --footer: var(--body-sections);
+
+     --kittenCard: var(--body-sections);
+ }
