--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,26 @@
-<main>
+<!-- HEADER -->
+<header class="app-header">
+  <app-menu><a routerLink="/menu"></a></app-menu>
+</header>
+
+<!-- MAIN -->
+<main class="app-main">
   <router-outlet></router-outlet>
 </main>
+
+<!-- FOOTER -->
+<footer class="app-footer">
+  <div>
+    <small>Copyright © 2024 chatons.org. Tous droits réservés.</small>
+  </div>
+  <div>
+    <ul>
+      <li>
+        <a [routerLink]="['/about']">A propos</a>
+      </li>
+      <li>
+        <a [routerLink]="['/contact']">Contact</a>
+      </li>
+    </ul>
+  </div>
+</footer>
