Commit CR nav instead div, comming soon! instead <component> works!

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,10 +10,10 @@
 
 <!-- FOOTER -->
 <footer class="app-footer">
-  <div>
+  <nav>
     <small>Copyright © 2024 chatons.org. Tous droits réservés.</small>
-  </div>
-  <div>
+  </nav>
+  <nav>
     <ul>
       <li>
         <a [routerLink]="['/about']">A propos</a>
@@ -22,5 +22,5 @@
         <a [routerLink]="['/contact']">Contact</a>
       </li>
     </ul>
-  </div>
+  </nav>
 </footer>
