Commit menu (html, css, module imports)

--- a/src/app/components/menu/menu/menu.component.html
+++ b/src/app/components/menu/menu/menu.component.html
@@ -1,1 +1,26 @@
-<p>comming soon!</p>
+<nav class="menu">
+
+    <a class="mobil" routerLink="/home">
+        <img class="logo" src="../../../assets/logo.kittens.svg" alt="logo">
+    </a>
+    <div>
+        <h2 class="head1-title">Châtons</h2>
+        <small>Mon histoire à moi et à toi</small>
+    </div>
+
+    <ul class="menuItems">
+        <li class="llink">
+            <a class="rlink" routerLink="/home">Accueil</a>
+        </li>
+        <li class="llink">
+            <a class="rlink" routerLink="/signin/">Connexion</a>
+        </li>
+        <a class="mobil" routerLink="/signin">
+            <ul class="container">
+                <li class="bar1"></li>
+                <li class="bar2"></li>
+                <li class="bar3"></li>
+            </ul>
+        </a>
+    </ul>
+</nav>
