--- a/src/app/components/menu/menu/menu.component.scss
+++ b/src/app/components/menu/menu/menu.component.scss
@@ -48,7 +48,7 @@
         }
 
         .bar2 {
-            opacity: inherit; //0
+            opacity: inherit; //BKP param to review : 0
         }
 
         .bar3 {
