--- a/src/app/pages/contact/contact/contact.component.scss
+++ b/src/app/pages/contact/contact/contact.component.scss
@@ -5,8 +5,8 @@ section {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 65vh;
-  max-width: 1200px;
+  max-width: inherit;
+  height: inherit;
   margin: 0 auto;
 }
 
