--- a/src/styles.scss
+++ b/src/styles.scss
@@ -81,6 +81,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        height: 100vh;
     }
 
     // Footer section //
