Commit layout main's comments auto resizing

--- a/src/app/components/menu/menu.component.scss
+++ b/src/app/components/menu/menu.component.scss
@@ -47,7 +47,7 @@
         }
 
         .bar2 {
-            opacity: inherit; //0
+            opacity: inherit; //BKP param to review : 0
         }
 
         .bar3 {
