--- a/src/styles.scss
+++ b/src/styles.scss
@@ -81,7 +81,8 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        height: 65vh;
+        height: auto;
+        min-height: 65vh;
     }
 
     // Footer section //
