--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,8 +1,1 @@
-<section>
-  <h1>My <span>Angular</span> Project 2024</h1>
-  <h2>Bienvenue dans mon projet Angular !</h2>
-  <p>
-    phase préparatoire d'intégration
-    <span>du cadre</span>, html5, ccs3, responsive, composants, routes <a routerLink="/"><span>lien accueil</span></a>
-  </p>
-</section>
+<app-kittens></app-kittens>
