--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,11 +10,13 @@
 
 <!-- FOOTER -->
 <footer class="app-footer">
+  <div class="footer-copyright">
+  <small>Copyright © 2024 chatons.org.</small>
+  <small>Tous droits réservés.</small>    
+  </div>
+
   <nav>
-    <small>Copyright © 2024 chatons.org. Tous droits réservés.</small>
-  </nav>
-  <nav>
-    <ul>
+    <ul class="footer-ul">
       <li>
         <a [routerLink]="['/about']">A propos</a>
       </li>
