Commit user section with adopted kittens implementation - show available and user's adopted kittens sections in home page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<!-- Frame (header, main, footer) -->
 <!-- HEADER -->
 <header class="app-header">
   <app-menu><a routerLink="/menu"></a></app-menu>
