--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,8 @@
+@use "../import";
+
 .app-header,
 .app-main,
 .app-footer {
-    max-width: 1200px;
-    margin: 0 auto;
-
     // for DEBUG purpose (Sartre modus)  to be removed
     border: var(--body-sections);
 }
@@ -43,6 +42,7 @@
     min-height: 77vh;
 }
 
+
 // Footer section //
 .app-footer {
     display: flex;
@@ -67,6 +67,9 @@
     }
 }
 
+/*** https://www.w3schools.com/css/css_rwd_mediaqueries.asp ***/
+/* Extra small devices (phones, 600px and down) */
+/* Small devices (portrait tablets and large phones, 600px and up) */
 @media screen and (max-width: 600px) {
 
     // Footer section //
@@ -84,4 +87,16 @@
             gap: 10px;
         }
     }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+/* Large devices (laptops/desktops, 992px and up) */
+@media screen and (min-width: 601px) and (max-width: 992px) {
+
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media screen and (min-width: 992px) {
+
 }
