--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,4 @@
-<app-kittens></app-kittens>
+<section class="main-grid-container">
+  <app-kittens class="grid-itemList"></app-kittens>
+  <app-user class="grid-itemUser"></app-user>
+</section>
