--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,19 +1,65 @@
 @use "../../../import" as *;
 
-section {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 78vh; // Parameter to review
-  max-width: 1200px;
-  margin: 0 auto;
+:root {
+    --main-grid-container-border: var(--body-sections);
 }
 
-p {
-  text-align: center;
+
+
+/****** LIST in main ****/
+.main-grid-container {
+    text-align: center;
+    background-color: var(--body-HeaderMainFooter-bg);
+    padding: 0;
+    margin: 0;
+
+    border: var(--main-grid-container-border); // For DEBUGGING pourpose. to remove
+    //border: .1px solid greenyellow; // For DEBUGGING pourpose. to remove
 }
 
-h2 {
-  margin: 0.5rem 0 1.5rem;
+/*** https://www.w3schools.com/css/css_rwd_mediaqueries.asp ***/
+/* Extra small devices (phones, 600px and down) */
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media screen and (max-width: 600px) {
+
+    // grid //
+    .main-grid-container {
+        display: grid;
+        grid-template-areas:
+            'list'
+            'user'
+            'form';
+        padding: .1rem;
+        margin: .1rem;
+
+    }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+/* Large devices (laptops/desktops, 992px and up) */
+@media screen and (min-width: 601px) and (max-width: 992px) {
+
+    .main-grid-container {
+        display: grid;
+        grid-template-areas:
+            'list'
+            'user'
+            'form';
+    }
+}
+/* Large devices (laptops/desktops, 992px and up) */
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media screen and (min-width: 992px) {
+
+    // main grid LIST available KITTENS/USER4 KITTENS/FORM NEW KITTEN //
+    .main-grid-container {
+        display: grid;
+        grid-template-areas:
+            'list list user'
+            'list list user'
+            'form form user';
+
+        // For DEBUGGING pourpose. to remove
+        border: 5px solid green;
+    }
 }
