--- a/src/app/pages/kittens/kittens.component.scss
+++ b/src/app/pages/kittens/kittens.component.scss
@@ -181,7 +181,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
+        justify-content: flex-start;
         width: 600px;
         height: 100%;
 
