Commit kittens, user's kittens intergration

--- a/src/app/components/user/user.component.scss
+++ b/src/app/components/user/user.component.scss
@@ -120,7 +120,7 @@
         .grid-itemUser-UserKittens-Container {
             position: relative;
             width: 100%;
-            max-width: 400px;
+            max-width: 400px; // To review
             height: inherit;
 
             .grid-itemUser-kittenList-Container {
