--- a/src/app/pages/kittens/kittens.component.scss
+++ b/src/app/pages/kittens/kittens.component.scss
@@ -182,7 +182,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: flex-start;
-        width: 600px;
+        //width: 600px;
         height: 100%;
 
         // For DEBUGGING pourpose. to remove
