Commit CR Change the path into the menu template routerlink urls

--- a/src/app/components/menu/menu/menu.component.html
+++ b/src/app/components/menu/menu/menu.component.html
@@ -1,6 +1,6 @@
 <nav class="menu">
 
-    <a class="mobil" routerLink="/home">
+    <a class="mobil" routerLink="/accueil">
         <img class="logo" src="../../../assets/logo.kittens.svg" alt="logo">
     </a>
     <div>
@@ -10,12 +10,12 @@
 
     <ul class="menuItems">
         <li class="llink">
-            <a class="rlink" routerLink="/home">Accueil</a>
+            <a class="rlink" routerLink="/accueil">Accueil</a>
         </li>
         <li class="llink">
-            <a class="rlink" routerLink="/signin/">Connexion</a>
+            <a class="rlink" routerLink="/connexion/">Connexion</a>
         </li>
-        <a class="mobil" routerLink="/signin">
+        <a class="mobil" routerLink="/connexion">
             <ul class="container">
                 <li class="bar1"></li>
                 <li class="bar2"></li>
