--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
   <nav>
     <ul>
       <li>
-        <a [routerLink]="['/about']">A propos</a>
+        <a [routerLink]="['/apropos']">A propos</a>
       </li>
       <li>
         <a [routerLink]="['/contact']">Contact</a>
